Rough cut of ability to issue a recheck for events.

--- a/lib/sensu-dashboard/assets/javascripts/templates/events/modal.hbs
+++ b/lib/sensu-dashboard/assets/javascripts/templates/events/modal.hbs
@@ -47,4 +47,8 @@
     <i class="icon-ok icon-white" />
     <span>&nbsp;Resolve</span>
   </button>
+  <button id="trigger_check" class="btn btn-danger">
+    <i class="icon-ok icon-white" />
+    <span>&nbsp;Recheck</span>
+  </button>
 </div>
